# rgu-labs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DONE  Dockerfile  LICENSE  Makefile  README.md  TODO  \  result.txt  serialized.txt  trace  tree
.github/workflows/: c.yml
00 - Programming/: 14.txt
00 - Programming/src/: 1.c  10.c  11.c  12.c  13.c  14.c  17.c  18.c  19.c  2.c  4.c  5.c  6.c  7.c  8.c  9.c
00-Programming/src/: 11.c  12.c  13.c  14.c  17.c  18.c  19.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
01 - Bit_arithmetic/: 12_file_gen.py  12_test_file  run  test  test_enc
01 - Bit_arithmetic/src/: 1.c  10.c  11_a.c  11_b.c  12.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
01-Bit_arithmetic/src/: 1.c  11_a.c  11_b.c  5.c  8.c
cmake/: toolchain_linux.cmake  toolchain_windows.cmake
files/: 1.txt  3.txt  bitwise.txt  city.txt  defines.txt  employees.txt  polynoms.txt  students.txt  word_count.txt
files/files/: 1.txt  2.txt
first_pack/: run
first_pack/src/: 1.c  (+17 more)
generators/: employees.py  sobyanin.py  students.py  words_count.py
libc/: arrays.h  binary_search_tree.h  calculator.h  cstring.h  errors.h  hash_table.h  input.h  int_vector.h  stack.h  u_list.h  utils.h
libs/: arrays.c  arrays.h  bits.c  bits.h  cstring.h  custom_math.h  cvector.h  errors.h  floating.h  input.c  input.h  int_vector.h  matrix.c  matrix.h  memory.h  types.h
materials/: books.md  exam-tasks.md  physics.md
src/: labs.h  main.c
term-1/: general-programming.md
term-2/: dsa.md  operating-systems.md
term-3/: databases.md  discrete-math.md  distributed-systems.md
(+115 files in other folders)
